--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,28 @@
+body {
+  margin: 0
+}
+
 div.main {
   background: center / cover no-repeat url("./background2.jpeg");
   height: 100vh;
-  padding: 2rem 1rem;
+  padding: 1rem;
+  display:flex;
+  flex-direction: column;
 }
 
 .item {
   padding: 1rem 0.5rem;
   opacity: .9;
+  margin-bottom: 1rem;
+}
+
+h1.title {
+  margin: 0.5rem;
+  color: green;
+  font-size: 2rem;
+}
+
+.progress {
+  align-self: center;
+  margin-top: 2rem;
 }
